# zdx

./: .gitignore  .mcp.json  .release-please-manifest.json  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  clippy.toml  default_config.toml  default_models.toml  dist-workspace.toml  justfile  package.json  prose.txt  prose2.txt  release-please-config.json  rustfmt.toml
.cargo/: config.toml
crates/zdx-bot/: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/zdx-bot/prompts/: bot_system_prompt.md  telegram_instruction_layer.md  telegram_surface_rules.md  telegram_system.md
crates/zdx-bot/src/: ask_user.rs  command_picker.rs  commands.rs  followups.rs  lib.rs  main.rs  staging.rs  telegram.rs  topic_title.rs  transcribe.rs  types.rs
crates/zdx-bot/src/agent/: mod.rs
crates/zdx-bot/src/bot/: context.rs  mod.rs  queue.rs
crates/zdx-bot/src/handlers/: message.rs
crates/zdx-bot/src/ingest/: mod.rs
crates/zdx-bot/src/telegram/: mod.rs  types.rs
crates/zdx-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  build.rs
crates/zdx-cli/prompts/: exec_instruction_layer.md  exec_surface_rules.md
crates/zdx-cli/src/: main.rs
crates/zdx-cli/src/cli/: mod.rs
crates/zdx-cli/src/modes/: exec.rs  mod.rs
crates/zdx-cli/tests/: cli_help.rs  config_path.rs  fixtures.rs  login_logout.rs  thread_schema.rs  threads_list_show.rs  tool_bash.rs  tool_use_loop.rs
crates/zdx-cli/tests/integration/: cli_help.rs  config_path.rs  fixtures.rs  main.rs  quota.rs  threads_export.rs  threads_list_show.rs  tool_bash.rs  tool_use_loop.rs  transcribe.rs
crates/zdx-core/: AGENTS.md  CHANGELOG.md  Cargo.toml  build.rs  default_config.toml  default_models.toml
crates/zdx-core/bundled_skills/memory/: SKILL.md
crates/zdx-core/bundled_skills/thread-tools/: SKILL.md
crates/zdx-core/instruction_layers/: automation_harness.md
crates/zdx-core/prompts/: gemini_agentic.md  handoff_prompt.md  identity_prompt.md  openai_codex.md  read_thread_prompt.md  stepfun_agentic.md  system_prompt_template.md  zdx_agentic.md
crates/zdx-core/src/: agent_activity.rs  automations.rs  config.rs  lib.rs  mcp.rs  models.rs  pidfile.rs  prompts.rs  skills.rs  subagents.rs  tracing_init.rs
crates/zdx-core/src/audio/: transcribe.rs
crates/zdx-core/src/core/: agent.rs  context.rs  events.rs  interrupt.rs  mod.rs  subagent.rs  thread_log.rs  thread_persistence.rs  title_generation.rs  worktree.rs
crates/zdx-core/src/images/: decode.rs  mod.rs  path_mime.rs
crates/zdx-core/src/providers/: apiyi.rs  debug_metrics.rs  debug_trace.rs  gemini.rs  mimo.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  oauth.rs  openai_api.rs  openrouter.rs  shared.rs  stepfun.rs  text_tool_parser.rs  thinking_parser.rs  xai.rs  xiaomi.rs  xiomi.rs  zai.rs  zen.rs
crates/zdx-core/src/tools/: bash.rs  edit.rs  fetch_webpage.rs  glob.rs  grep.rs  mod.rs  read.rs  read_thread.rs  subagent.rs  thread_search.rs  todo_write.rs  web_search.rs  write.rs
crates/zdx-core/subagents/: automation_assistant.md  designer.md  explorer.md  finder.md  general_assistant.md  librarian.md  oracle.md
crates/zdx-engine/: AGENTS.md  Cargo.toml
crates/zdx-engine/src/: agent_activity.rs  automations.rs  config.rs  custom_commands.rs  followups.rs  lib.rs  mcp.rs  models.rs  pidfile.rs  prompts.rs  providers.rs  skills.rs  subagents.rs  test_support.rs  zdx_context.rs
crates/zdx-engine/src/audio/: mod.rs  speak.rs  transcribe.rs
crates/zdx-engine/src/core/: agent.rs  context.rs  events.rs  handoff_generation.rs  interrupt.rs  mod.rs  prompt_builder_generation.rs  qmd.rs  subagent.rs  thread_export.rs  thread_persistence.rs  title_generation.rs  tldr_generation.rs  usage_stats.rs  worktree.rs
crates/zdx-engine/src/images/: path_mime.rs
crates/zdx-engine/src/tools/: ask_user_question.rs  memory_get.rs  memory_search.rs  mod.rs  read_thread.rs  subagent.rs  thread_search.rs  todo_write.rs
crates/zdx-engine/tests/: gemini_replay_fidelity.rs
crates/zdx-monitor/: AGENTS.md  Cargo.toml
crates/zdx-monitor/src/: app.rs  lib.rs  ui.rs
crates/zdx-providers/: AGENTS.md  Cargo.toml
crates/zdx-providers/src/: apiyi.rs  build.rs  debug_metrics.rs  debug_trace.rs  deepseek.rs  grok_build.rs  lib.rs  lmstudio.rs  meta.rs  minimax.rs  mistral.rs  moonshot.rs  oauth.rs  openai_compatible.rs  opencode_go.rs  openrouter.rs  shared.rs  stepfun.rs  subscription_quota.rs  thinking_parser.rs  xai.rs  xiaomi.rs  xiaomi_plan.rs  zai.rs  zen.rs
crates/zdx-providers/src/anthropic/: api.rs  cli.rs  mod.rs  shared.rs  sse.rs  types.rs
crates/zdx-providers/src/gemini/: antigravity.rs  api.rs  cli.rs  mod.rs  shared.rs  sse.rs
crates/zdx-providers/src/openai/: api.rs  chat_completions.rs  codex.rs  image_generation.rs  mod.rs  responses.rs  responses_sse.rs  responses_types.rs  responses_ws.rs
crates/zdx-tools/: AGENTS.md  Cargo.toml
crates/zdx-tools/src/: bash.rs  edit.rs  fetch_webpage.rs  glob.rs  grep.rs  lib.rs  read.rs  web_search.rs  write.rs
crates/zdx-transcript/: Cargo.toml
crates/zdx-transcript/src/: build.rs  cell.rs  convert.rs  lib.rs  reasoning.rs  style.rs  wrap.rs
crates/zdx-tui/: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/zdx-tui/prompts/: chat_instruction_layer.md  chat_surface_rules.md
crates/zdx-tui/src/: ask_user.rs  effects.rs  events.rs  lib.rs  mutations.rs  render.rs  state.rs  terminal.rs  update.rs
zdx-core/: Cargo.toml  default_config.toml  default_models.toml
zdx-core/prompts/: handoff_prompt.md
zdx-core/src/: config.rs
zdx-core/src/core/: agent.rs  events.rs  mod.rs  thread_log.rs
zdx-core/src/providers/: gemini.rs  mod.rs  shared.rs
zdx-core/src/tools/: bash.rs  mod.rs  read.rs
zdx-tui/: Cargo.toml
zdx-tui/src/: effects.rs  events.rs  lib.rs  mutations.rs  render.rs  state.rs  update.rs
zdx-tui/src/common/: commands.rs  mod.rs  task.rs  text.rs
zdx-tui/src/features/: mod.rs
zdx-tui/src/modes/: mod.rs
zdx-tui/src/overlays/: command_palette.rs  file_picker.rs  login.rs  mod.rs  model_picker.rs  thinking_picker.rs  thread_picker.rs  timeline.rs
zdx-tui/src/runtime/: handoff.rs  mod.rs  thread_title.rs
(+739 files in other folders)
