[workspace]
members = [
    "crates/zdx-cli",
    "crates/xtask",
    "crates/zdx-core",
    "crates/zdx-tui",
    "crates/zdx-bot",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.90"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Too noisy / stylistic preference:
module_name_repetitions = "allow"
must_use_candidate = "allow"
absolute_paths = "warn"
multiple_crate_versions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Restriction lints (opt-in):
map_err_ignore = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
clone_on_ref_ptr = "warn"
rest_pat_in_fully_bound_structs = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
arboard = { version = "3", default-features = false }
base64 = "0.22"
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7"
crossterm = "0.29"
ctrlc = "3.4"
futures-util = "0.3.31"
eventsource-stream = "0.2"
enum-map = "2"
globset = "0.4"
nucleo-matcher = "0.3"
ignore = "0.4"
infer = "0.19"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
minijinja = "2.15.1"
open = "5"
pulldown-cmark = "0.13"
ratatui = "0.30"
ratatui-image = "10"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "stream", "native-tls", "http2", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "=3.24.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "process", "macros", "sync"] }
tokio-util = "0.7"
toml = "0.8"
toml_edit = "0.22"
unicode-segmentation = "1.12"
unicode-width = "0.2"
url = "2.5"
uuid = { version = "1.19.0", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
