[package]
name = "zdx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
ctrlc.workspace = true
dirs.workspace = true
futures-util.workspace = true
infer.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
url.workspace = true
uuid.workspace = true
