[package]
name = "zdx-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
zdx-core = { path = "../zdx-core" }

anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
comfy-table.workspace = true
crossterm.workspace = true
dirs.workspace = true
ignore.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tui-textarea.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true

arboard = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "test-util"] }
