[package]
name = "zdx-bot"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true
[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
infer = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
zdx-core = { path = "../zdx-core" }