[package]
name = "zdx-bot"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Telegram bot for zdx"
repository = "https://github.com/tallesborges/zdx"
readme = "../../README.md"
keywords = ["zdx", "ai", "agent", "telegram", "bot"]
categories = ["command-line-utilities"]

[lints]
workspace = true
[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
infer = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
zdx-core = { path = "../zdx-core" }