[package]
name = "zdx"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "zdx"
publish = false

[[bin]]
name = "zdx"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:zdx-tui"]

[dependencies]
zdx-core = { path = "../zdx-core" }
zdx-tui = { path = "../zdx-tui", optional = true }

anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
open.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true

[lints.clippy]
absolute_paths = "warn"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "test-util"] }
wiremock = "0.6.5"
