[package]
name = "zdx"
version = "0.4.0"
edition.workspace = true
license.workspace = true
default-run = "zdx"
publish = false
repository = "https://github.com/tallesborges/zdx"
description = "Terminal AI assistant"
homepage = "https://github.com/tallesborges/zdx"

[package.metadata.dist]
dist = true

[[bin]]
name = "zdx"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:zdx-tui"]

[dependencies]
zdx-core = { path = "../zdx-core" }
zdx-tui = { path = "../zdx-tui", optional = true }
zdx-bot = { path = "../zdx-bot" }

anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
open.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "test-util"] }
wiremock = "0.6.5"
