[package]
name = "zdx-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true
[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
ctrlc.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
globset.workspace = true
infer.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
url.workspace = true
uuid.workspace = true
