[package]
name = "zdx-engine"
version = "0.1.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
ctrlc.workspace = true
fast_image_resize.workspace = true
futures-util.workspace = true
globset.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
image.workspace = true
minijinja.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
rmcp = { workspace = true, default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
url.workspace = true
uuid.workspace = true
zdx-assets.workspace = true
zdx-providers.workspace = true
zdx-tools.workspace = true
zdx-types.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
