[package]
name = "zdx-monitor"
version = "0.1.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
zdx-core = { path = "../zdx-core" }
