[package]
name = "zdx-providers"
version = "0.1.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zdx-assets.workspace = true
zdx-types.workspace = true
