[package]
name = "zdx-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
globset.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
regex.workspace = true
ignore.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zdx-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
