[package]
name = "zdx-transcript"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
zdx-engine = { path = "../zdx-engine" }

chrono.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
