[package]
name = "zdx-tui"
version = "0.2.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true
[dependencies]
zdx-engine = { path = "../zdx-engine" }

anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
comfy-table.workspace = true
cpal.workspace = true
crossterm.workspace = true
enum-map.workspace = true
fast_image_resize.workspace = true
ignore.workspace = true
image.workspace = true
hound.workspace = true
nucleo-matcher.workspace = true
open.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true

arboard = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "test-util"] }
